<resources>
    <string name="app_name">Nutrition Tracker</string>
    <string name="calories">Calories</string>
    <string name="quantity">Quantity</string>
    <string name="total_carbs">Total Carbs</string>
    <string name="added_sugars">Added Sugars</string>
    <string name="fiber">Fiber</string>
    <string name="protein">Protein</string>
    <string name="serving_size">Serving Size</string>
    <string name="item_name">Item Name</string>
    <string name="submit">Submit</string>
</resources>